force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/OtherSpecify__c.field-meta.xml
<CustomField>
    <fullName>OtherSpecify__c</fullName>
    <description>Text box for Other</description>
    <inlineHelpText>Select the checkbox if above options are not applicable.</inlineHelpText>
    <label>Other please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>