force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/PanelRating__c.field-meta.xml
<CustomField>
    <fullName>PanelRating__c</fullName>
    <description>Panel Rating</description>
    <inlineHelpText>Please enter panel rating in watts for this project building.</inlineHelpText>
    <label>Panel Rating (watts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>