force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/PendantDirectIndirect__c.field-meta.xml
<CustomField>
    <fullName>PendantDirectIndirect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Pendant Direct/Indirect</description>
    <inlineHelpText>Select checkbox if implementing Pendant Direct/Indirect light fixtures.</inlineHelpText>
    <label>Pendant Direct/Indirect</label>
    <type>Checkbox</type>
</CustomField>