force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Primarysecondary__c.field-meta.xml
<CustomField>
    <fullName>Primarysecondary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if PrimarySecondary</description>
    <inlineHelpText>Select the checkbox if primary/secondary chiller is included in project building scope.</inlineHelpText>
    <label>Primary-Secondary Chilled Water System</label>
    <type>Checkbox</type>
</CustomField>