force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/PvInstType__c.field-meta.xml
<CustomField>
    <fullName>PvInstType__c</fullName>
    <description>Please select one of the following roofing features or types that are included in this PV installation:</description>
    <inlineHelpText>Please select one of the following roofing features or types that are included in this PV installation:</inlineHelpText>
    <label>PV Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BuildingIntegrated</fullName>
            </value>
            <value>
                <fullName>GroundMounted</fullName>
            </value>
            <value>
                <fullName>RoofMounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>