force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/PvSysCapacity__c.field-meta.xml
<CustomField>
    <fullName>PvSysCapacity__c</fullName>
    <description>PV System Capacity</description>
    <inlineHelpText>Please enter the planned or installed capacity for this PV array (kW).</inlineHelpText>
    <label>PV System Capacity (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>