force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Rahd_ScopeSysParentId__c.field-meta.xml
<CustomField>
    <fullName>Rahd_ScopeSysParentId__c</fullName>
    <description>This is the parent ID for this object&apos;s RAHD_ScopeSystem</description>
    <inlineHelpText>This is the parent ID for this object&apos;s RAHD_ScopeSystem</inlineHelpText>
    <label>RAHD_Scope System Parent ID</label>
    <referenceTo>PBS_gBUILD_PBuildingScopeSystem__c</referenceTo>
    <relationshipLabel>gBUILD Scope System Details</relationshipLabel>
    <relationshipName>C_PBS_gBUILD_PBuildingScopeSystemDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>