force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/RecessedHighPerfLensed__c.field-meta.xml
<CustomField>
    <fullName>RecessedHighPerfLensed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Recessed High-Performance Lensed</description>
    <inlineHelpText>Select the check box if recessed high-performance lenses (e.g., curved or volumetric) is included in project building scope.</inlineHelpText>
    <label>Recessed High-Performance Lensed</label>
    <type>Checkbox</type>
</CustomField>