force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/RefrigerantType__c.field-meta.xml
<CustomField>
    <fullName>RefrigerantType__c</fullName>
    <description>Type of refrigerant used in chiller system</description>
    <inlineHelpText>Select the type of refrigerant used in chiller system.</inlineHelpText>
    <label>Refrigerant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F407A</fullName>
            </value>
            <value>
                <fullName>R123</fullName>
            </value>
            <value>
                <fullName>R134</fullName>
            </value>
            <value>
                <fullName>R22</fullName>
            </value>
            <value>
                <fullName>R290(Propane)</fullName>
            </value>
            <value>
                <fullName>R401A</fullName>
            </value>
            <value>
                <fullName>R404A</fullName>
            </value>
            <value>
                <fullName>R407C</fullName>
            </value>
            <value>
                <fullName>R408A</fullName>
            </value>
            <value>
                <fullName>R409A</fullName>
            </value>
            <value>
                <fullName>R410A</fullName>
            </value>
            <value>
                <fullName>R500</fullName>
            </value>
            <value>
                <fullName>R502</fullName>
            </value>
            <value>
                <fullName>R717(Ammonia)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>