force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/RefrigerantTypeOtherText__c.field-meta.xml
<CustomField>
    <fullName>RefrigerantTypeOtherText__c</fullName>
    <description>If other type, text</description>
    <inlineHelpText>If other type of refrigerant used in chiller system, please type here.</inlineHelpText>
    <label>Other Refrigerant Type</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>