force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/RepairedCoolRoofType__c.field-meta.xml
<CustomField>
    <fullName>RepairedCoolRoofType__c</fullName>
    <description>If yes, please provide type of reflective coating applied:</description>
    <inlineHelpText>If yes, please provide type of reflective coating applied.</inlineHelpText>
    <label>Reflective Roof Coating Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cementitious</fullName>
            </value>
            <value>
                <fullName>Elastomeric</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>