force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/RepairedRoofType__c.field-meta.xml
<CustomField>
    <fullName>RepairedRoofType__c</fullName>
    <description>Reflective Roof Coating</description>
    <inlineHelpText>Select the checkbox if reflective roof coating is added on an existing roof.</inlineHelpText>
    <label>Repaired Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vegetative Roof</fullName>
            </value>
            <value>
                <fullName>Reflective Roof Coating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>