force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Rooftype__c.field-meta.xml
<CustomField>
    <fullName>Rooftype__c</fullName>
    <description>Please select one of the following roofing features or types that are included in this roof installation:</description>
    <inlineHelpText>Please select one of the following roofing features or types that are included in this roof installation:</inlineHelpText>
    <label>Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RoofNewCoolReflectiveRoof</fullName>
            </value>
            <value>
                <fullName>RoofVegetative</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>