force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Rooftypeothertext__c.field-meta.xml
<CustomField>
    <fullName>Rooftypeothertext__c</fullName>
    <description>If Other HPGB Features, please provide additional information</description>
    <inlineHelpText>If project building includes other HPGB roofing features, please provide additional information.</inlineHelpText>
    <label>Other Roof Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>