force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/ScopeSystemDetailRecordType__c.field-meta.xml
<CustomField>
    <fullName>ScopeSystemDetailRecordType__c</fullName>
    <label>Scope System Detail Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NewReplacementDetails</fullName>
            </value>
            <value>
                <fullName>NewApplicationDetails</fullName>
            </value>
            <value>
                <fullName>RetrofitOrReplacementDetails</fullName>
            </value>
            <value>
                <fullName>ChilledWaterHotWaterSteamDistSysDetails</fullName>
            </value>
            <value>
                <fullName>NewInstallationOrArraysDetails</fullName>
            </value>
            <value>
                <fullName>NewInstallationOrTurbinesDetails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>