force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SodiumVapor__c.field-meta.xml
<CustomField>
    <fullName>SodiumVapor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Sodium Vapor</description>
    <inlineHelpText>Please indicate what light sources are part of lighting application for this space.</inlineHelpText>
    <label>Sodium Vapor</label>
    <type>Checkbox</type>
</CustomField>