force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SolarModuleType__c.field-meta.xml
<CustomField>
    <fullName>SolarModuleType__c</fullName>
    <description>Solar module type dropdown</description>
    <inlineHelpText>Solar module type dropdown</inlineHelpText>
    <label>Solar Module Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amorphous</fullName>
            </value>
            <value>
                <fullName>Crystalline</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>