force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SolarModuleTypeOtherText__c.field-meta.xml
<CustomField>
    <fullName>SolarModuleTypeOtherText__c</fullName>
    <description>Solar module other textbox</description>
    <inlineHelpText>If solar module type is not included in the above drop-down, please enter here.</inlineHelpText>
    <label>Other Solar Module Type</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>