force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SolarThermalSysCapacity__c.field-meta.xml
<CustomField>
    <fullName>SolarThermalSysCapacity__c</fullName>
    <description>System Capacity</description>
    <inlineHelpText>Please provide the planned or installed capacity (BTU/hr) for this Solar Thermal system.</inlineHelpText>
    <label>System Capacity (BTU/hr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>