force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SpectrallyEnhLighting__c.field-meta.xml
<CustomField>
    <fullName>SpectrallyEnhLighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Spectrally Enhanced Lighting</description>
    <inlineHelpText>Please indicate what light sources are part of lighting application for this space.</inlineHelpText>
    <label>Spectrally Enhanced Lighting</label>
    <type>Checkbox</type>
</CustomField>