force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SummerBoiler__c.field-meta.xml
<CustomField>
    <fullName>SummerBoiler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Summer Boiler</description>
    <inlineHelpText>Select checkbox if new system is a Summer Boiler.</inlineHelpText>
    <label>Summer Boiler</label>
    <type>Checkbox</type>
</CustomField>