force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SurfaceMounted__c.field-meta.xml
<CustomField>
    <fullName>SurfaceMounted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Surface Mounted</description>
    <inlineHelpText>Select checkbox if indoor light fixtures are surface mounted.</inlineHelpText>
    <label>Surface Mounted</label>
    <type>Checkbox</type>
</CustomField>