force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SysCapacity__c.field-meta.xml
<CustomField>
    <fullName>SysCapacity__c</fullName>
    <description>System Capacity</description>
    <label>System Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>