force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/SysCost__c.field-meta.xml
<CustomField>
    <fullName>SysCost__c</fullName>
    <description>System Cost</description>
    <inlineHelpText>Please enter the total cost ($) of the system or installation. For guidance on what to include in this reported cost, please see gBUILD User Guide.</inlineHelpText>
    <label>System Cost ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>