force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/T5T5HoLamps__c.field-meta.xml
<CustomField>
    <fullName>T5T5HoLamps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if T5 or T5HO Lamps</description>
    <inlineHelpText>Select checkbox if T5 or T5HO Lamps are being installed.</inlineHelpText>
    <label>T5 or T5HO Lamps</label>
    <type>Checkbox</type>
</CustomField>