force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/T8Lamps__c.field-meta.xml
<CustomField>
    <fullName>T8Lamps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if T8 Lamps</description>
    <inlineHelpText>Select checkbox if T8 Lamps are being installed.</inlineHelpText>
    <label>T8 Lamps</label>
    <type>Checkbox</type>
</CustomField>