force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/TotCfmNewAirHandlers__c.field-meta.xml
<CustomField>
    <fullName>TotCfmNewAirHandlers__c</fullName>
    <description>Total CFM of New Air Handlers</description>
    <inlineHelpText>Please enter project&apos;s average monthly Construction &amp; Demolition waste diversion (tons).</inlineHelpText>
    <label>Total CFM of New Air Handlers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>