force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/UnderCabinetAndOrDesktopTaskLighting__c.field-meta.xml
<CustomField>
    <fullName>UnderCabinetAndOrDesktopTaskLighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Under Cabinet and/or Desktop Task Lighting</description>
    <inlineHelpText>Select checkbox if light fixture work includes installing Under Cabinet and/or Desktop Task Lighting</inlineHelpText>
    <label>Under Cabinet/Desktop Task Lighting</label>
    <type>Checkbox</type>
</CustomField>