force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/UniqueFiltration__c.field-meta.xml
<CustomField>
    <fullName>UniqueFiltration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Unique Filtration</description>
    <inlineHelpText>Select the checkbox if unique filtration system (i.e. High-Efficiency Particulate Air (HEPA), carbon filter, etc.) is included in project building scope.</inlineHelpText>
    <label>Unique Air Filtration System</label>
    <type>Checkbox</type>
</CustomField>