force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/UvLighting__c.field-meta.xml
<CustomField>
    <fullName>UvLighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if UV Lighting</description>
    <inlineHelpText>Select checkbox if a UV air filtration system is included in the project building scope.</inlineHelpText>
    <label>UV Air Filtration System</label>
    <type>Checkbox</type>
</CustomField>