force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/VarPrimaryPumping__c.field-meta.xml
<CustomField>
    <fullName>VarPrimaryPumping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Variable Primary Pumping</description>
    <inlineHelpText>Select the checkbox if variable primary pumping is included in the project building scope.</inlineHelpText>
    <label>Variable Primary Pumping</label>
    <type>Checkbox</type>
</CustomField>