force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/VarRefrigerantFlowSys__c.field-meta.xml
<CustomField>
    <fullName>VarRefrigerantFlowSys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Variable Refrigerant Flow System</description>
    <inlineHelpText>Select checkbox if a Variable Refrigerant Flow (VRF) System is being installed.</inlineHelpText>
    <label>Variant Refrigerant Flow (VRF) System</label>
    <type>Checkbox</type>
</CustomField>