force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Vfds__c.field-meta.xml
<CustomField>
    <fullName>Vfds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if VFDs</description>
    <inlineHelpText>Indicates if Variable Frequency Drives (VFDs) part of scope.</inlineHelpText>
    <label>Variable Frequency Drives (VFDs)</label>
    <type>Checkbox</type>
</CustomField>