force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/VsdCnt__c.field-meta.xml
<CustomField>
    <fullName>VsdCnt__c</fullName>
    <description>Number of VSDorVFD</description>
    <inlineHelpText>Number of Variable Speed Drives (VSDs) or Variable Frequency Drive (VFDs) that will be installed in this building as part of the project scope.</inlineHelpText>
    <label>Number of VSDs/VFDs</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>