force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/Wallwashing__c.field-meta.xml
<CustomField>
    <fullName>Wallwashing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Wallwashing</description>
    <inlineHelpText>Select the checkbox if wall washing is included as part of a lighting application for this space.</inlineHelpText>
    <label>Wallwashing</label>
    <type>Checkbox</type>
</CustomField>