force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WatersideEconomizers__c.field-meta.xml
<CustomField>
    <fullName>WatersideEconomizers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Waterside Economizers</description>
    <inlineHelpText>Select the checkbox if waterside economizer is included in project building scope.</inlineHelpText>
    <label>Waterside Economizers</label>
    <type>Checkbox</type>
</CustomField>