force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WindTurbineCapacity__c.field-meta.xml
<CustomField>
    <fullName>WindTurbineCapacity__c</fullName>
    <description>Capacity of Wind Turbine</description>
    <inlineHelpText>Please provide installed or planned capacity for your each planned or installed turbine. (kW)</inlineHelpText>
    <label>Wind Turbine Capacity (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>