force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyARRACompliance__c.field-meta.xml
<CustomField>
    <fullName>WntyARRACompliance__c</fullName>
    <label>Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>