force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyARRAComplianceExpln__c.field-meta.xml
<CustomField>
    <fullName>WntyARRAComplianceExpln__c</fullName>
    <label>Compliance Explain</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>