force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyDuration__c.field-meta.xml
<CustomField>
    <fullName>WntyDuration__c</fullName>
    <description>The duration of the warranty.</description>
    <inlineHelpText>The duration of the warranty.</inlineHelpText>
    <label>Duration (Years)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>