force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>WntyEffectiveDate__c</fullName>
    <description>The date the warranty became effective.</description>
    <inlineHelpText>The date the warranty became effective.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>