force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyOneYearFollowUp__c.field-meta.xml
<CustomField>
    <fullName>WntyOneYearFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there a one year follow-up for the warranty?</description>
    <inlineHelpText>Is there a one year follow-up for the warranty?</inlineHelpText>
    <label>One Year Follow Up</label>
    <type>Checkbox</type>
</CustomField>