force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyPOCEmail__c.field-meta.xml
<CustomField>
    <fullName>WntyPOCEmail__c</fullName>
    <description>Warranty POC Email</description>
    <inlineHelpText>Please provide Warranty POC Email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>