force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyPOCName__c.field-meta.xml
<CustomField>
    <fullName>WntyPOCName__c</fullName>
    <description>Warranty POC Name</description>
    <inlineHelpText>Please provide Warranty POC Name.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>