force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyPOCPhone__c.field-meta.xml
<CustomField>
    <fullName>WntyPOCPhone__c</fullName>
    <description>Warranty POC Phone</description>
    <inlineHelpText>Please provide Warranty POC Phone.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>