force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyProviderName__c.field-meta.xml
<CustomField>
    <fullName>WntyProviderName__c</fullName>
    <description>The name of the warranty provider</description>
    <inlineHelpText>Please provide the name of the warranty provider.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>