force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyProviderType__c.field-meta.xml
<CustomField>
    <fullName>WntyProviderType__c</fullName>
    <description>The type of the warranty provider</description>
    <inlineHelpText>Please provide the type of warranty provided.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other,PleaseSpecify:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>