force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyProviderTypeOther__c.field-meta.xml
<CustomField>
    <fullName>WntyProviderTypeOther__c</fullName>
    <description>The type of the warranty provider when &quot;other&quot; is chosen.</description>
    <inlineHelpText>Please provide the type of warrenty provided.</inlineHelpText>
    <label>Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>