force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyUncertaintyReason__c.field-meta.xml
<CustomField>
    <fullName>WntyUncertaintyReason__c</fullName>
    <inlineHelpText>Select the checkbox if warranty information is TBD.</inlineHelpText>
    <label>Warranty Information TBD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>