force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WntyUncertaintyReasonExpln__c.field-meta.xml
<CustomField>
    <fullName>WntyUncertaintyReasonExpln__c</fullName>
    <inlineHelpText>Please explain why warranty is uncertain.</inlineHelpText>
    <label>If TBD, Please Explain Why</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>