force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/fields/WrkstatSpecificPendantDigitalCntrl__c.field-meta.xml
<CustomField>
    <fullName>WrkstatSpecificPendantDigitalCntrl__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Workstation-Specific Pendant with Digital Control</description>
    <inlineHelpText>Select checkbox if workstation-specific pendants with digital lighting controls are included in the project building scope.</inlineHelpText>
    <label>Workstation-Spec Pendant w/ Controls</label>
    <type>Checkbox</type>
</CustomField>