force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/AH_NewReplacement.recordType-meta.xml
<RecordType>
    <fullName>AH_NewReplacement</fullName>
    <active>true</active>
    <description>HVAC -&gt; Air Handler -&gt; New/Replacement</description>
    <label>HVAC -&gt; Air Handler -&gt; New/Replacement</label>
</RecordType>