force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/B_NewReplacement.recordType-meta.xml
<RecordType>
    <fullName>B_NewReplacement</fullName>
    <active>true</active>
    <description>HVAC -&gt; Boilers -&gt; New/Replacement</description>
    <label>HVAC -&gt; Boilers -&gt; New/Replacement</label>
</RecordType>