force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/BG_NewSystem.recordType-meta.xml
<RecordType>
    <fullName>BG_NewSystem</fullName>
    <active>true</active>
    <description>Renewable Energy -&gt; Biogas -&gt; New System</description>
    <label>Renewable Energy -&gt; Biogas -&gt; New System</label>
</RecordType>