force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/BM_NewSystem.recordType-meta.xml
<RecordType>
    <fullName>BM_NewSystem</fullName>
    <active>true</active>
    <description>Renewable Energy -&gt; Biomass -&gt; New System</description>
    <label>Renewable Energy -&gt; Biomass -&gt; New Syste</label>
</RecordType>