force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/Chl_NewReplacement.recordType-meta.xml
<RecordType>
    <fullName>Chl_NewReplacement</fullName>
    <active>true</active>
    <description>HVAC -&gt; Chillers -&gt; New/Replacement</description>
    <label>HVAC -&gt; Chillers -&gt; New/Replacement</label>
</RecordType>