force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/G_NewSystem.recordType-meta.xml
<RecordType>
    <fullName>G_NewSystem</fullName>
    <active>true</active>
    <description>Renewable Energy -&gt; Geothermal -&gt; New System</description>
    <label>Renewable Energy -&gt; Geothermal -&gt; New Sy</label>
</RecordType>