force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/IL_NewApplication.recordType-meta.xml
<RecordType>
    <fullName>IL_NewApplication</fullName>
    <active>true</active>
    <description>Lighting -&gt; Indoor Lighting -&gt; New Application Details</description>
    <label>Lighting -&gt; Indoor Lighting -&gt; New Appli</label>
</RecordType>