force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/IL_RetrofitOrReplacement.recordType-meta.xml
<RecordType>
    <fullName>IL_RetrofitOrReplacement</fullName>
    <active>true</active>
    <description>Lighting -&gt; Indoor Lighting -&gt; Retrofit or Replacement</description>
    <label>Lighting -&gt; Indoor Lighting -&gt; Retrofit</label>
</RecordType>