force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/NewReplacementDetails.recordType-meta.xml
<RecordType>
    <fullName>NewReplacementDetails</fullName>
    <active>true</active>
    <description>HVAC -&gt; Boilers -&gt; New/Replacement Details</description>
    <label>HVAC -&gt; Boilers -&gt; New/Replacement Detai</label>
</RecordType>