force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/OL_NewApplication.recordType-meta.xml
<RecordType>
    <fullName>OL_NewApplication</fullName>
    <active>true</active>
    <description>Lighting -&gt; Outdoor Lighting -&gt; New Application</description>
    <label>Lighting -&gt; Outdoor Lighting -&gt; New Appl</label>
</RecordType>