force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/OL_RetrofitOrReplacement.recordType-meta.xml
<RecordType>
    <fullName>OL_RetrofitOrReplacement</fullName>
    <active>true</active>
    <description>Lighting -&gt; Outdoor Lighting -&gt; Retrofit or Replacement Details</description>
    <label>Lighting -&gt; Outdoor Lighting -&gt; Retrofit</label>
</RecordType>