force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/Other_ChilledWaterHotH2OAndSteamDistSys.recordType-meta.xml
<RecordType>
    <fullName>Other_ChilledWaterHotH2OAndSteamDistSys</fullName>
    <active>true</active>
    <description>Other Category -&gt; Other Scope -&gt; Chilled Water/ Hot Water and Steam Distribution Systems Details</description>
    <label>Other Category -&gt; Other Scope -&gt; Chilled</label>
</RecordType>