force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/PV_NewInstallationOrArrays.recordType-meta.xml
<RecordType>
    <fullName>PV_NewInstallationOrArrays</fullName>
    <active>true</active>
    <description>Renewable Energy -&gt; Photovoltaic -&gt; New Installation or Arrays Details</description>
    <label>Renewable Energy -&gt; Photovoltaic -&gt; New</label>
</RecordType>