force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/R_NewReplacement.recordType-meta.xml
<RecordType>
    <fullName>R_NewReplacement</fullName>
    <active>true</active>
    <description>Building Envelope  -&gt; Roof -&gt; New/Replacement</description>
    <label>Building Envelope  -&gt; Roof -&gt; New/Replac</label>
</RecordType>