force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/R_RepairsOrAlterationsToExistingRoof.recordType-meta.xml
<RecordType>
    <fullName>R_RepairsOrAlterationsToExistingRoof</fullName>
    <active>true</active>
    <description>Building Envelope  -&gt; Roof -&gt; Repairs or Alterations to Existing Roof</description>
    <label>Building Envelope  -&gt; Roof -&gt; Repairs or</label>
</RecordType>