force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystemDetail__c/recordTypes/ST_NewSystem.recordType-meta.xml
<RecordType>
    <fullName>ST_NewSystem</fullName>
    <active>true</active>
    <description>Renewable Energy -&gt; Solar Thermal -&gt; New System</description>
    <label>Renewable Energy -&gt; Solar Thermal -&gt; New</label>
</RecordType>